# key-overlay-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.toml
.github/workflows/: build.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-overlay-spike.txt
.sisyphus/notepads/key-overlay-rewrite/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: key-overlay-rewrite.md
assets/: .gitkeep
docs/: config.md
logs/: key-overlay.log.2026-02-23
src/: app.rs  bars.rs  cli.rs  color.rs  config.rs  fading.rs  font.rs  key_map.rs  layout.rs  lib.rs  logging.rs  main.rs  renderer.rs  types.rs  watcher.rs
src/input/: AGENTS.md  backend.rs  key_mapping.rs  mod.rs  rdev_backend.rs
tests/: integration.rs
