[package]
name = "key-overlay-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.29"
egui_overlay = "0.9"
rdev = { git = "https://github.com/rustdesk-org/rdev.git" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "8"
notify-debouncer-full = "0.5"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
crossbeam-channel = "0.5"
ctrlc = "3"

[dev-dependencies]
tempfile = "3.25.0"


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
strip = true
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
rpath = false
